[package]
name = "ransom-rust"
version = "0.1.0"
authors = ["richiprieto <richiprieto@crice.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.7.3"
aes-stream="0.2.1"
clap = "2.33"
walkdir = "2"
openssl = "0.10"
